# flutter_webp_converter

./: .gitignore  .metadata  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
lib/: main.dart
lib/l10n/: app_en.arb  app_pt.arb
lib/src/: app.dart  setup.config.dart  setup.dart
lib/src/core/event_bus/: base_event.dart  event_bus.dart
lib/src/core/utils/: file.dart  localizations.dart
lib/src/domain/: domain.dart
lib/src/domain/drivers/: converter_driver.dart  drivers.dart
lib/src/domain/entities/: entities.dart  parameters.dart
lib/src/domain/use_cases/: use_cases.dart  (+1 more)
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/utils/: conversion.dart
lib/src/widgets/: file_size_display.dart  image_file.dart  slider_with_label.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner/: DebugProfile.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: converter.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_webp_converter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_webp_converter.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+27 files in other folders)
