[package]
name = "rust_lib_webp_converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
image = "0.25.5"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
webp = "0.3.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"